--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,45 @@ html {
     overflow-x: hidden;
     text-shadow: 0 3px 5px rgb(0, 0, 0, 0.1);
 }
+
+a {
+    color: currentColor;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* 2. Shared */
+
+.wallpaper {
+    display: block;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    right: 0;
+}
+
+/* 3. Specific */
+
+.wallpaper {
+    background-image: url(../images/wallpaper.jpg);
+    background-position: center;
+    background-size: cover;
+    opacity: 0.2;
+    position: fixed;
+}
+
+.content {
+    display: flex;
+    position: relative;
+    min-height: 100vh;
+}
+
+.side {
+    max-height: 20rem;
+    max-width: 20rem;
+}
+
+.about {
+    max-width: 26rem;
+}
+
