--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,14 @@ a {
 
 /* 2. Shared */
 
-.wallpaper {
+.wallpaper,
+.picture-shadow,
+.picture-image {
     display: block;
     height: 100%;
-    width: 100%;
     left: 0;
-    right: 0;
+    top: 0;
+    width: 100%;
 }
 
 /* 3. Specific */
@@ -54,10 +56,28 @@ a {
     max-width: 26rem;
 }
 
+.picture {
+    padding-top: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.picture-shadow {
+    border-radius: 290486px;
+    background-image: radial-gradient(#000 0%, rgba(0, 0, 0, 0) 70%);
+    position: absolute;
+    top: 10%;
+}
+
+.picture-image {
+    border-radius: 290486px;
+    position: absolute;
+}
+
 /* 4. Responsive */
 
 @media screen and (max-width: 799px) {
-    
+
     .content {
         flex-direction: column;
         justify-content: center;
@@ -89,7 +109,7 @@ a {
         order: 2;
         width: 20rem;
     }
-    
+
     .about {
         flex-grow: 1;
         flex-shrink: 1;
