--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,12 @@ a {
     animation-timing-function: cubic-bezier(0, 0.5, 0.25, 1.25);
 }
 
+.wallpaper,
+.picture-shadow,
+.picture-image {
+    opacity: 0;
+}
+
 /* 3. Specific */
 
 .wallpaper {
@@ -249,15 +255,19 @@ a {
 }
 
 .wallpaper {
-    animation-name: zoomOut;
     animation-timing-function: ease-out;
 }
 
-.picture-shadow {
+.wallpaper.is-loaded {
+    animation-delay: 1s;
+    animation-name: zoomOut;
+}
+
+.picture.is-loaded .picture-shadow {
     animation-name: picShadow;
 }
 
-.picture-image {
+.picture.is-loaded .picture-image {
     animation-name: picImage;
 }
 
@@ -322,7 +332,8 @@ a {
 }
 
 .social li:nth-child(3) {
-    animation-delay: 1s; /* 1000ms = 1s */
+    animation-delay: 1s;
+    /* 1000ms = 1s */
 }
 
 .social li:nth-child(4) {
